# graphql_ppx

./: .bazelrc  WORKSPACE.bazel  WORKSPACE.bzl
bzl/ppx/exe/: BUILD.bazel
src/base/: BUILD.bazel
src/native/: BUILD.bazel
tests_native/: BUILD.bazel
