load(
    "@obazl_rules_ocaml//ocaml:rules.bzl",
    "ocaml_archive",
    "ocaml_library",
    "ocaml_module",
    "ocaml_ns_library",
    "ppx_library",
    "ppx_module",
)

################################################################
## STANZA 1: LIBRARY GRAPHQL_PPX_BASE
################################################################
GRAPHQL_PPX_BASE_MODULE_OPTS = []

GRAPHQL_PPX_BASE_OPAM_DEPS = [
    "unix",
    "result",
    "yojson",
]

GRAPHQL_PPX_BASE_PPX = "@//bzl/ppx/exe:ppx_tools_versioned.metaquot_402"

GRAPHQL_PPX_BASE_PPX_ARGS = []

############
ppx_library(
    name = "graphql_ppx_base",
    visibility = ["//visibility:public"],
    modules = [
        ":_Ast_serializer_apollo",
        ":_Build_config",
        ":_Compat",
        ":_Dirty_checker",
        ":_Generator_utils",
        ":_Graphql_ast",
        ":_Graphql_lexer",
        ":_Graphql_parser",
        ":_Graphql_parser_document",
        ":_Graphql_parser_value",
        ":_Graphql_ppx_base",
        ":_Graphql_printer",
        ":_Log",
        ":_Multi_visitor",
        ":_Option",
        ":_Ppx_config",
        ":_Read_schema",
        ":_Result_decoder",
        ":_Result_ext",
        ":_Result_structure",
        ":_Rule_known_argument_names",
        ":_Rule_no_unused_variables",
        ":_Schema",
        ":_Source_pos",
        ":_Traversal_utils",
        ":_Type_utils",
        ":_Validations"
    ],
)

#############
ppx_module(
    name = "_Ast_serializer_apollo",
    struct = "ast_serializer_apollo.ml",
    opts = GRAPHQL_PPX_BASE_MODULE_OPTS,
    ppx = GRAPHQL_PPX_BASE_PPX,
    ppx_args = GRAPHQL_PPX_BASE_PPX_ARGS,
    deps = [
        # do not sort (buildifier)
        ":_Graphql_ast",
        ":_Source_pos",
    ],
    deps_opam = GRAPHQL_PPX_BASE_OPAM_DEPS
)

#############
# ppx_module(
#     name = "_Build_config.cppo",
#     struct = "build_config.cppo.ml",
# #     opts = GRAPHQL_PPX_BASE_MODULE_OPTS,
#     ppx = GRAPHQL_PPX_BASE_PPX,
#     ppx_args = GRAPHQL_PPX_BASE_PPX_ARGS,
#     deps = GRAPHQL_PPX_BASE_DEPS,
# )

#############
ppx_module(
    name = "_Compat",
    struct = "compat.ml",
    opts = GRAPHQL_PPX_BASE_MODULE_OPTS,
    ppx = GRAPHQL_PPX_BASE_PPX,
    ppx_args = GRAPHQL_PPX_BASE_PPX_ARGS,
    deps = [":_Build_config"],
    deps_opam = GRAPHQL_PPX_BASE_OPAM_DEPS
)

#############
ppx_module(
    name = "_Dirty_checker",
    struct = "dirty_checker.ml",
    opts = GRAPHQL_PPX_BASE_MODULE_OPTS,
    ppx = GRAPHQL_PPX_BASE_PPX,
    ppx_args = GRAPHQL_PPX_BASE_PPX_ARGS,
    deps = [
        # do not sort (buildifier)
        ":_Log",
    ],
    deps_opam = GRAPHQL_PPX_BASE_OPAM_DEPS
)

#############
ppx_module(
    name = "_Generator_utils",
    struct = "generator_utils.ml",
    opts = GRAPHQL_PPX_BASE_MODULE_OPTS,
    ppx = GRAPHQL_PPX_BASE_PPX,
    ppx_args = GRAPHQL_PPX_BASE_PPX_ARGS,
    deps = [
        # do not sort (buildifier)
        ":_Compat",
        ":_Graphql_ast",
        ":_Ppx_config",
        ":_Schema",
        ":_Source_pos",
    ],
    deps_opam = GRAPHQL_PPX_BASE_OPAM_DEPS
)

#############
ppx_module(
    name = "_Graphql_ast",
    struct = "graphql_ast.ml",
    opts = GRAPHQL_PPX_BASE_MODULE_OPTS,
    ppx = GRAPHQL_PPX_BASE_PPX,
    ppx_args = GRAPHQL_PPX_BASE_PPX_ARGS,
    deps = [
        # do not sort (buildifier)
        ":_Source_pos",
    ],
    deps_opam = GRAPHQL_PPX_BASE_OPAM_DEPS
)

#############
ppx_module(
    name = "_Graphql_lexer",
    struct = "graphql_lexer.ml",
    opts = GRAPHQL_PPX_BASE_MODULE_OPTS,
    ppx = GRAPHQL_PPX_BASE_PPX,
    ppx_args = GRAPHQL_PPX_BASE_PPX_ARGS,
    deps = [
        # do not sort (buildifier)
        ":_Source_pos",
    ],
    deps_opam = GRAPHQL_PPX_BASE_OPAM_DEPS
)

#############
ppx_module(
    name = "_Graphql_parser",
    struct = "graphql_parser.ml",
    opts = GRAPHQL_PPX_BASE_MODULE_OPTS,
    ppx = GRAPHQL_PPX_BASE_PPX,
    ppx_args = GRAPHQL_PPX_BASE_PPX_ARGS,
    deps = [
        # do not sort (buildifier)
        ":_Graphql_lexer",
        ":_Result_ext",
        ":_Source_pos",
    ],
    deps_opam = GRAPHQL_PPX_BASE_OPAM_DEPS
)

#############
ppx_module(
    name = "_Graphql_parser_document",
    struct = "graphql_parser_document.ml",
    opts = GRAPHQL_PPX_BASE_MODULE_OPTS,
    ppx = GRAPHQL_PPX_BASE_PPX,
    ppx_args = GRAPHQL_PPX_BASE_PPX_ARGS,
    deps = [
        # do not sort (buildifier)
        ":_Graphql_ast",
        ":_Graphql_lexer",
        ":_Graphql_parser",
        ":_Graphql_parser_value",
        ":_Result_ext",
        ":_Source_pos",
    ],
    deps_opam = GRAPHQL_PPX_BASE_OPAM_DEPS
)

#############
ppx_module(
    name = "_Graphql_parser_value",
    struct = "graphql_parser_value.ml",
    opts = GRAPHQL_PPX_BASE_MODULE_OPTS,
    ppx = GRAPHQL_PPX_BASE_PPX,
    ppx_args = GRAPHQL_PPX_BASE_PPX_ARGS,
    deps = [
        # do not sort (buildifier)
        ":_Graphql_ast",
        ":_Graphql_lexer",
        ":_Graphql_parser",
        ":_Result_ext",
        ":_Source_pos",
    ],
    deps_opam = GRAPHQL_PPX_BASE_OPAM_DEPS
)

#############
ppx_module(
    name = "_Graphql_ppx_base",
    struct = "graphql_ppx_base.ml",
    opts = GRAPHQL_PPX_BASE_MODULE_OPTS,
    ppx = GRAPHQL_PPX_BASE_PPX,
    ppx_args = GRAPHQL_PPX_BASE_PPX_ARGS,
    deps = [
        # do not sort (buildifier)
        ":_Ast_serializer_apollo",
        ":_Compat",
        ":_Generator_utils",
        ":_Graphql_ast",
        ":_Graphql_lexer",
        ":_Graphql_parser",
        ":_Graphql_parser_document",
        ":_Graphql_printer",
        ":_Log",
        ":_Option",
        ":_Ppx_config",
        ":_Read_schema",
        ":_Result_decoder",
        ":_Result_structure",
        ":_Schema",
        ":_Source_pos",
        ":_Traversal_utils",
        ":_Type_utils",
        ":_Validations",
    ],
    deps_opam = GRAPHQL_PPX_BASE_OPAM_DEPS
)

#############
ppx_module(
    name = "_Graphql_printer",
    struct = "graphql_printer.ml",
    opts = GRAPHQL_PPX_BASE_MODULE_OPTS,
    ppx = GRAPHQL_PPX_BASE_PPX,
    ppx_args = GRAPHQL_PPX_BASE_PPX_ARGS,
    deps = [
        # do not sort (buildifier)
        ":_Graphql_ast",
        ":_Option",
        ":_Ppx_config",
        ":_Schema",
        ":_Source_pos",
    ],
    deps_opam = GRAPHQL_PPX_BASE_OPAM_DEPS
)

#############
ppx_module(
    name = "_Log",
    struct = "log.ml",
    opts = GRAPHQL_PPX_BASE_MODULE_OPTS,
    ppx = GRAPHQL_PPX_BASE_PPX,
    ppx_args = GRAPHQL_PPX_BASE_PPX_ARGS,
    deps = [
        # do not sort (buildifier)
        ":_Ppx_config",
    ],
    deps_opam = GRAPHQL_PPX_BASE_OPAM_DEPS
)

#############
ppx_module(
    name = "_Multi_visitor",
    struct = "multi_visitor.ml",
    opts = GRAPHQL_PPX_BASE_MODULE_OPTS,
    ppx = GRAPHQL_PPX_BASE_PPX,
    ppx_args = GRAPHQL_PPX_BASE_PPX_ARGS,
    deps = [
        # do not sort (buildifier)
        ":_Traversal_utils",
    ],
    deps_opam = GRAPHQL_PPX_BASE_OPAM_DEPS
)

#############
ppx_module(
    name = "_Option",
    struct = "option.ml",
    opts = GRAPHQL_PPX_BASE_MODULE_OPTS,
    ppx = GRAPHQL_PPX_BASE_PPX,
    ppx_args = GRAPHQL_PPX_BASE_PPX_ARGS,
    deps_opam = GRAPHQL_PPX_BASE_OPAM_DEPS
)

#############
ppx_module(
    name = "_Ppx_config",
    struct = "ppx_config.ml",
    opts = GRAPHQL_PPX_BASE_MODULE_OPTS,
    ppx = GRAPHQL_PPX_BASE_PPX,
    ppx_args = GRAPHQL_PPX_BASE_PPX_ARGS,
    deps = [
        # do not sort (buildifier)
        ":_Option",
        ":_Source_pos",
    ],
    deps_opam = GRAPHQL_PPX_BASE_OPAM_DEPS
)

#############
ppx_module(
    name = "_Read_schema",
    struct = "read_schema.ml",
    opts = GRAPHQL_PPX_BASE_MODULE_OPTS,
    ppx = GRAPHQL_PPX_BASE_PPX,
    ppx_args = GRAPHQL_PPX_BASE_PPX_ARGS,
    deps = [
        # do not sort (buildifier)
        ":_Dirty_checker",
        ":_Log",
        ":_Ppx_config",
        ":_Schema",
    ],
    deps_opam = GRAPHQL_PPX_BASE_OPAM_DEPS
)

#############
ppx_module(
    name = "_Result_decoder",
    struct = "result_decoder.ml",
    opts = GRAPHQL_PPX_BASE_MODULE_OPTS,
    ppx = GRAPHQL_PPX_BASE_PPX,
    ppx_args = GRAPHQL_PPX_BASE_PPX_ARGS,
    deps = [
        # do not sort (buildifier)
        ":_Generator_utils",
        ":_Graphql_ast",
        ":_Option",
        ":_Result_structure",
        ":_Schema",
        ":_Source_pos",
        ":_Type_utils",
    ],
    deps_opam = GRAPHQL_PPX_BASE_OPAM_DEPS
)

#############
ppx_module(
    name = "_Result_ext",
    struct = "result_ext.ml",
    opts = GRAPHQL_PPX_BASE_MODULE_OPTS,
    ppx = GRAPHQL_PPX_BASE_PPX,
    ppx_args = GRAPHQL_PPX_BASE_PPX_ARGS,
    deps_opam = GRAPHQL_PPX_BASE_OPAM_DEPS
)

#############
ppx_module(
    name = "_Result_structure",
    struct = "result_structure.ml",
    opts = GRAPHQL_PPX_BASE_MODULE_OPTS,
    ppx = GRAPHQL_PPX_BASE_PPX,
    ppx_args = GRAPHQL_PPX_BASE_PPX_ARGS,
    deps = [
        # do not sort (buildifier)
        ":_Graphql_ast",
        ":_Schema",
        ":_Source_pos",
    ],
    deps_opam = GRAPHQL_PPX_BASE_OPAM_DEPS
)

#############
ppx_module(
    name = "_Rule_known_argument_names",
    struct = "rule_known_argument_names.ml",
    opts = GRAPHQL_PPX_BASE_MODULE_OPTS,
    ppx = GRAPHQL_PPX_BASE_PPX,
    ppx_args = GRAPHQL_PPX_BASE_PPX_ARGS,
    deps = [
        # do not sort (buildifier)
        ":_Graphql_ast",
        ":_Option",
        ":_Schema",
        ":_Source_pos",
        ":_Traversal_utils",
    ],
    deps_opam = GRAPHQL_PPX_BASE_OPAM_DEPS
)

#############
ppx_module(
    name = "_Rule_no_unused_variables",
    struct = "rule_no_unused_variables.ml",
    opts = GRAPHQL_PPX_BASE_MODULE_OPTS,
    ppx = GRAPHQL_PPX_BASE_PPX,
    ppx_args = GRAPHQL_PPX_BASE_PPX_ARGS,
    deps = [
        # do not sort (buildifier)
        ":_Graphql_ast",
        ":_Source_pos",
        ":_Traversal_utils",
    ],
    deps_opam = GRAPHQL_PPX_BASE_OPAM_DEPS
)

#############
ppx_module(
    name = "_Schema",
    struct = "schema.ml",
    opts = GRAPHQL_PPX_BASE_MODULE_OPTS,
    ppx = GRAPHQL_PPX_BASE_PPX,
    ppx_args = GRAPHQL_PPX_BASE_PPX_ARGS,
    deps_opam = GRAPHQL_PPX_BASE_OPAM_DEPS
)

#############
ppx_module(
    name = "_Source_pos",
    struct = "source_pos.ml",
    opts = GRAPHQL_PPX_BASE_MODULE_OPTS,
    ppx = GRAPHQL_PPX_BASE_PPX,
    ppx_args = GRAPHQL_PPX_BASE_PPX_ARGS,
    deps_opam = GRAPHQL_PPX_BASE_OPAM_DEPS
)

#############
ppx_module(
    name = "_Traversal_utils",
    struct = "traversal_utils.ml",
    opts = GRAPHQL_PPX_BASE_MODULE_OPTS,
    ppx = GRAPHQL_PPX_BASE_PPX,
    ppx_args = GRAPHQL_PPX_BASE_PPX_ARGS,
    deps = [
        # do not sort (buildifier)
        ":_Generator_utils",
        ":_Graphql_ast",
        ":_Option",
        ":_Result_structure",
        ":_Schema",
        ":_Source_pos",
    ],
    deps_opam = GRAPHQL_PPX_BASE_OPAM_DEPS
)

#############
ppx_module(
    name = "_Type_utils",
    struct = "type_utils.ml",
    opts = GRAPHQL_PPX_BASE_MODULE_OPTS,
    ppx = GRAPHQL_PPX_BASE_PPX,
    ppx_args = GRAPHQL_PPX_BASE_PPX_ARGS,
    deps = [
        # do not sort (buildifier)
        ":_Graphql_ast",
        ":_Schema",
        ":_Source_pos",
    ],
    deps_opam = GRAPHQL_PPX_BASE_OPAM_DEPS
)

###########
ppx_module(
    name = "_Validations",
    struct = "validations.ml",
    opts = GRAPHQL_PPX_BASE_MODULE_OPTS,
    ppx = GRAPHQL_PPX_BASE_PPX,
    ppx_args = GRAPHQL_PPX_BASE_PPX_ARGS,
    deps = [
        # do not sort (buildifier)
        ":_Multi_visitor",
        ":_Rule_known_argument_names",
        ":_Rule_no_unused_variables",
        ":_Traversal_utils",
    ],
    deps_opam = GRAPHQL_PPX_BASE_OPAM_DEPS
)

#############
ppx_module(
    name = "_Build_config",
    struct = ":build_config.ml",
    opts = GRAPHQL_PPX_BASE_MODULE_OPTS,
    ppx = GRAPHQL_PPX_BASE_PPX,
    ppx_args = GRAPHQL_PPX_BASE_PPX_ARGS,
    deps = [
        # do not sort (buildifier)
        # ":_Multi_visitor",
        # ":_Rule_known_argument_names",
        # ":_Rule_no_unused_variables",
        # ":_Traversal_utils",
    ],
    deps_opam = GRAPHQL_PPX_BASE_OPAM_DEPS
)

genrule(
    name = "gensrcs",
    srcs = ["build_config.cppo.ml"],
    outs = ["build_config.ml"],
    tools = ["@ocaml//tools:cppo"],
    cmd = " ".join([
        "$(location @ocaml//tools:cppo) -V OCAML:4.07.1 -o $@ $<"
    ]),
)
