load(
    "@obazl_rules_ocaml//ocaml:rules.bzl",
    "ppx_archive",
    "ppx_library",
    "ppx_executable",
    "ppx_module",
)

################################################################
## PPX STANZA 1: GRAPHQL_PPX
################################################################
GRAPHQL_PPX_PPX_MODULE_OPTS = []

GRAPHQL_PPX_DEPS = [
    # do not sort (buildifier)
    "@graphql_ppx//src/base:graphql_ppx_base",
]

GRAPHQL_PPX_PPX_ARGS = [
    # do not sort (buildifier)
]

############
# ppx_archive(
ppx_library(
    name = "graphql_ppx",
    # opts = [],
    visibility = ["//visibility:public"],
    modules = GRAPHQL_PPX_DEPS + [
        # do not sort (buildifier)
        ":Graphql_ppx",
        ":Output_native_decoder",
        ":Output_native_encoder",
        ":Output_native_module",
        ":Output_native_unifier",
        ":Output_native_utils",
    ],
)

###########
ppx_module(
    name = "Graphql_ppx",
    struct = "graphql_ppx.ml",
    opts = GRAPHQL_PPX_PPX_MODULE_OPTS,
    ppx = ":ppx1.exe",
    ppx_args = GRAPHQL_PPX_PPX_ARGS,
    deps = [
        # do not sort (buildifier)
        "@graphql_ppx//src/base:graphql_ppx_base",
        "Output_native_module",
        "Output_native_utils",
    ],
    deps_opam = ["ppxlib"]
)

###########
ppx_module(
    name = "Output_native_decoder",
    struct = "output_native_decoder.ml",
    opts = GRAPHQL_PPX_PPX_MODULE_OPTS,
    ppx = ":ppx1.exe",
    ppx_args = GRAPHQL_PPX_PPX_ARGS,
    deps = [
        # do not sort (buildifier)
        "@graphql_ppx//src/base:graphql_ppx_base",
        "Output_native_utils",
    ],
    deps_opam = ["ppxlib"]
)

###########
ppx_module(
    name = "Output_native_encoder",
    struct = "output_native_encoder.ml",
    opts = GRAPHQL_PPX_PPX_MODULE_OPTS,
    ppx = ":ppx1.exe",
    ppx_args = GRAPHQL_PPX_PPX_ARGS,
    deps = [
        # do not sort (buildifier)
        "@graphql_ppx//src/base:graphql_ppx_base",
        "Output_native_utils",
    ],
    deps_opam = ["ppxlib"]
)

###########
ppx_module(
    name = "Output_native_module",
    struct = "output_native_module.ml",
    opts = GRAPHQL_PPX_PPX_MODULE_OPTS,
    ppx = ":ppx1.exe",
    ppx_args = GRAPHQL_PPX_PPX_ARGS,
    deps = [
        # do not sort (buildifier)
        "@graphql_ppx//src/base:graphql_ppx_base",
        "Output_native_decoder",
        "Output_native_encoder",
        "Output_native_unifier",
    ],
    deps_opam = ["ppxlib"]
)

###########
ppx_module(
    name = "Output_native_unifier",
    struct = "output_native_unifier.ml",
    opts = GRAPHQL_PPX_PPX_MODULE_OPTS,
    ppx = ":ppx1.exe",
    ppx_args = GRAPHQL_PPX_PPX_ARGS,
    deps = [
        # do not sort (buildifier)
        "@graphql_ppx//src/base:graphql_ppx_base",
        "Output_native_encoder",
        "Output_native_utils",
    ],
    deps_opam = ["ppxlib"]
)

###########
ppx_module(
    name = "Output_native_utils",
    struct = "output_native_utils.ml",
    opts = GRAPHQL_PPX_PPX_MODULE_OPTS,
    ppx = ":ppx1.exe",
    ppx_args = GRAPHQL_PPX_PPX_ARGS,
    deps = [
        # do not sort (buildifier)
        "@graphql_ppx//src/base:graphql_ppx_base",
    ],
    deps_opam = ["ppxlib"]
)

###############
ppx_executable(
    name = "ppx1.exe",
    main = "//bzl/ppx/exe:ppxlib_driver",
    opts = [],
    visibility = [
        "//src/native:__pkg__",
    ],
    deps_opam = [
        "ppxlib",
        "ppxlib.metaquot",
    ],
)
